--- a/doors.html
+++ b/doors.html
@@ -57,8 +57,7 @@
         <!-- Hero Section -->
         <section class="relative pt-32 pb-24 bg-neutral-900">
             <div class="absolute inset-0 opacity-30">
-                <img src="C:\Users\HP_ProOne_440_User\Desktop\alkayan\html_version\صور\Minimal Entry Door Design with Vertical Handle Accent - Trionua.jpeg"
-                    alt="Premium Doors" class="w-full h-full object-cover">
+                <img src="assets/1.jpeg" alt="Premium Doors" class="w-full h-full object-cover">
             </div>
             <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <span class="text-[#8B7355] tracking-wider uppercase">أبواب راقية</span>
@@ -203,8 +202,7 @@
                 <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="group cursor-pointer">
                         <div class="relative aspect-[3/4] overflow-hidden rounded-lg mb-4">
-                            <img src="C:\Users\HP_ProOne_440_User\Desktop\alkayan\html_version\صور\photo_2024-05-06_22-12-07.jpg"
-                                alt="Grand Entrance Door"
+                            <img src="assets/photo_2024-05-06_22-12-07.jpg" alt="Grand Entrance Door"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -237,8 +235,7 @@
                     </div>
                     <div class="group cursor-pointer">
                         <div class="relative aspect-[3/4] overflow-hidden rounded-lg mb-4">
-                            <img src="C:\Users\HP_ProOne_440_User\Desktop\alkayan\html_version\صور\photo_2025-11-27_15-57-22.jpg"
-                                alt="Glass Sliding Door"
+                            <img src="assets/photo_2025-11-27_15-57-22.jpg" alt="Glass Sliding Door"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-black/60 via-black/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
