--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الكيان - Al-Kayan</title>
+    <title>Al-Kayan</title>
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -144,8 +144,7 @@
                     <div
                         class="bg-white rounded-lg border border-neutral-200 shadow-sm overflow-hidden group hover:shadow-xl transition-shadow">
                         <div class="aspect-[4/3] overflow-hidden">
-                            <img src="C:\Users\HP_ProOne_440_User\Desktop\alkayan\html_version\صور\Multi-Level Kitchen Islands_ Design Revolution.jpeg"
-                                alt="مطابخ فاخرة"
+                            <img src="assets/Multi-Level Kitchen Islands_ Design Revolution.jpeg" alt="مطابخ فاخرة"
                                 class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500">
                         </div>
                         <div class="p-6" dir="rtl">
@@ -169,8 +168,7 @@
                     <div
                         class="bg-white rounded-lg border border-neutral-200 shadow-sm overflow-hidden group hover:shadow-xl transition-shadow">
                         <div class="aspect-[4/3] overflow-hidden">
-                            <img src="C:\Users\HP_ProOne_440_User\Desktop\alkayan\html_version\صور\Minimal Entry Door Design with Vertical Handle Accent - Trionua.jpeg"
-                                alt="أبواب راقية"
+                            <img src="assets/1.jpeg" alt="أبواب راقية"
                                 class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500">
                         </div>
                         <div class="p-6" dir="rtl">
@@ -193,8 +191,7 @@
                     <div
                         class="bg-white rounded-lg border border-neutral-200 shadow-sm overflow-hidden group hover:shadow-xl transition-shadow">
                         <div class="aspect-[4/3] overflow-hidden">
-                            <img src="C:\Users\HP_ProOne_440_User\Desktop\alkayan\html_version\صور\zz.jpeg"
-                                alt="أثاث راقٍ"
+                            <img src="assets/zz.jpeg" alt="أثاث راقٍ"
                                 class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500">
                         </div>
                         <div class="p-6" dir="rtl">
