--- a/doors.html
+++ b/doors.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Kayan</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/55.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link
@@ -24,7 +26,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <a href="index.html" class="flex items-center ml-auto">
-                    <img src="assets/logo.png" alt="Al-Kayan" class="h-40 w-auto">
+                    <img src="assets/55.png" alt="Al-Kayan" class="h-16 w-auto">
                 </a>
                 <nav class="hidden md:flex items-center gap-8">
                     <a href="index.html" class="transition-colors text-neutral-700 hover:text-[#8B7355]">الرئيسية</a>
@@ -84,7 +86,7 @@
                         أبواب مداخل رائعة وحلول داخلية مبتكرة بتصاميم عصرية </p>
                 </div>
 
-                <div class="grid md:grid-cols-3 gap-8 mb-16">
+                <div class="grid md:grid-cols-2 gap-8 mb-16">
                     <div class="bg-neutral-50 p-8 rounded-lg">
                         <h3 class="mb-4 text-xl font-bold">أبواب رئيسية</h3>
                         <p class="text-neutral-600 mb-6">
@@ -126,28 +128,6 @@
                             <li class="flex items-start gap-3"><i data-lucide="check"
                                     class="text-[#8B7355] flex-shrink-0 mt-1 w-4 h-4"></i><span
                                     class="text-neutral-700 text-sm">أجهزة ومقابض فاخرة</span></li>
-                        </ul>
-                    </div>
-
-                    <div class="bg-neutral-50 p-8 rounded-lg">
-                        <h3 class="mb-4 text-xl font-bold">أبواب المحورية</h3>
-                        <p class="text-neutral-600 mb-6">
-                            تميّز مدخلك أو غرفتك بأبواب محورية أنيقة وعصرية، توفر حركة سلسة وفريدة عند الفتح والإغلاق.
-                            تصميم مبتكر يجمع بين الجمال والمتانة
-                        </p>
-                        <ul class="space-y-2">
-                            <li class="flex items-start gap-3"><i data-lucide="check"
-                                    class="text-[#8B7355] flex-shrink-0 mt-1 w-4 h-4"></i><span
-                                    class="text-neutral-700 text-sm">حركة سلسة بزاوية دوران كاملة</span></li>
-                            <li class="flex items-start gap-3"><i data-lucide="check"
-                                    class="text-[#8B7355] flex-shrink-0 mt-1 w-4 h-4"></i><span
-                                    class="text-neutral-700 text-sm">تصميم عصري يناسب المنازل والفلل الفاخرة</span></li>
-                            <li class="flex items-start gap-3"><i data-lucide="check"
-                                    class="text-[#8B7355] flex-shrink-0 mt-1 w-4 h-4"></i><span
-                                    class="text-neutral-700 text-sm">مواد عالية الجودة: خشب، زجاج، أو معدنية</span></li>
-                            <li class="flex items-start gap-3"><i data-lucide="check"
-                                    class="text-[#8B7355] flex-shrink-0 mt-1 w-4 h-4"></i><span
-                                    class="text-neutral-700 text-sm">مقابض وأجهزة فاخرة لتعزيز الفخامة</span></li>
                         </ul>
                     </div>
                 </div>
@@ -458,7 +438,7 @@
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div class="md:col-span-1 text-right md:text-right">
                     <div class="mb-4 flex justify-end md:justify-start">
-                        <img src="assets/logo.png" alt="الكيان" class="h-40 w-auto">
+                        <img src="assets/55.png" alt="الكيان" class="h-40 w-auto">
                     </div>
                     <p class="text-sm mb-6">أثاث وأبواب ومطابخ مخصصة فاخرة مصنوعة بتميز ودقة</p>
                     <div class="flex gap-4 justify-end md:justify-start">
