--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Kayan</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/55.png">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -66,8 +67,6 @@
                         class="text-right transition-colors text-neutral-700 hover:text-[#8B7355]">المطابخ</a>
                     <a href="about.html" class="text-right transition-colors text-neutral-700 hover:text-[#8B7355]">من
                         نحن</a>
-                    <a href="invoice.html"
-                        class="text-right transition-colors text-neutral-700 hover:text-[#8B7355]">فاتورتي</a>
                 </nav>
             </div>
         </div>
@@ -239,7 +238,7 @@
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div class="md:col-span-1 text-right md:text-right">
                     <div class="mb-4 flex justify-end md:justify-start">
-                        <img src="assets/logo.png" alt="الكيان" class="h-40 w-auto">
+                        <img src="assets/55.png" alt="الكيان" class="h-40 w-auto">
                     </div>
                     <p class="text-sm mb-6">أثاث وأبواب ومطابخ مخصصة فاخرة مصنوعة بتميز ودقة</p>
                     <div class="flex gap-4 justify-end md:justify-start">
