--- a/doors.html
+++ b/doors.html
@@ -26,7 +26,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <a href="index.html" class="flex items-center ml-auto">
-                    <img src="assets/55.png" alt="Al-Kayan" class="h-16 w-auto">
+                    <img src="assets/logo.png" alt="Al-Kayan" class="h-20 w-auto">
                 </a>
                 <nav class="hidden md:flex items-center gap-8">
                     <a href="index.html" class="transition-colors text-neutral-700 hover:text-[#8B7355]">الرئيسية</a>
@@ -438,7 +438,7 @@
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div class="md:col-span-1 text-right md:text-right">
                     <div class="mb-4 flex justify-end md:justify-start">
-                        <img src="assets/55.png" alt="الكيان" class="h-40 w-auto">
+                        <img src="assets/logo.png" alt="الكيان" class="h-20 w-auto">
                     </div>
                     <p class="text-sm mb-6">أثاث وأبواب ومطابخ مخصصة فاخرة مصنوعة بتميز ودقة</p>
                     <div class="flex gap-4 justify-end md:justify-start">
