--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="index.html" class="flex items-center ml-auto">
-                    <img src="assets/logo.png" alt="الكيان" class="h-40 w-auto">
+                    <img src="assets/55.png" alt="الكيان" class="h-16 w-auto">
                 </a>
 
                 <!-- Desktop Navigation -->
