--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>من نحن - الكيان</title>
+    <title>Al-Kayan</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/55.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link
@@ -24,7 +26,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <a href="index.html" class="flex items-center ml-auto">
-                    <img src="assets/logo.png" alt="الكيان" class="h-40 w-auto">
+                    <img src="assets/logo.png" alt="الكيان" class="h-16 w-auto">
                 </a>
                 <nav class="hidden md:flex items-center gap-8">
                     <a href="index.html" class="transition-colors text-neutral-700 hover:text-[#8B7355]">الرئيسية</a>
@@ -32,16 +34,6 @@
                     <a href="furniture.html" class="transition-colors text-neutral-700 hover:text-[#8B7355]">الأثاث</a>
                     <a href="kitchens.html" class="transition-colors text-neutral-700 hover:text-[#8B7355]">المطابخ</a>
                     <a href="about.html" class="transition-colors text-[#8B7355]">من نحن</a>
-                    <div class="relative group">
-                        <button class="p-2 text-neutral-700 hover:text-[#8B7355] transition-colors">
-                            <i data-lucide="more-vertical" class="w-5 h-5"></i>
-                        </button>
-                        <div
-                            class="absolute left-0 mt-2 w-48 bg-white border border-neutral-200 rounded-md shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
-                            <a href="invoice.html"
-                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 text-right">فاتورتي</a>
-                        </div>
-                    </div>
                 </nav>
                 <button id="mobile-menu-btn" class="md:hidden p-2 text-neutral-700">
                     <i data-lucide="menu" class="w-6 h-6"></i>
@@ -58,8 +50,6 @@
                     <a href="kitchens.html"
                         class="text-right transition-colors text-neutral-700 hover:text-[#8B7355]">المطابخ</a>
                     <a href="about.html" class="text-right transition-colors text-[#8B7355]">من نحن</a>
-                    <a href="invoice.html"
-                        class="text-right transition-colors text-neutral-700 hover:text-[#8B7355]">فاتورتي</a>
                 </nav>
             </div>
         </div>
@@ -153,7 +143,8 @@
 
                 <div class="grid md:grid-cols-3 gap-8">
                     <div class="text-center">
-                        <div class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <div
+                            class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
                             <i data-lucide="award" class="text-[#8B7355] w-7 h-7"></i>
                         </div>
                         <h3 class="mb-3 text-lg font-bold">الجودة أولاً</h3>
@@ -164,7 +155,8 @@
                     </div>
 
                     <div class="text-center">
-                        <div class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <div
+                            class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
                             <i data-lucide="users" class="text-[#8B7355] w-7 h-7"></i>
                         </div>
                         <h3 class="mb-3 text-lg font-bold">التركيز على العميل</h3>
@@ -175,7 +167,8 @@
                     </div>
 
                     <div class="text-center">
-                        <div class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <div
+                            class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
                             <i data-lucide="zap" class="text-[#8B7355] w-7 h-7"></i>
                         </div>
                         <h3 class="mb-3 text-lg font-bold">الابتكار</h3>
@@ -186,7 +179,8 @@
                     </div>
 
                     <div class="text-center">
-                        <div class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <div
+                            class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
                             <i data-lucide="shield" class="text-[#8B7355] w-7 h-7"></i>
                         </div>
                         <h3 class="mb-3 text-lg font-bold">النزاهة</h3>
@@ -197,7 +191,8 @@
                     </div>
 
                     <div class="text-center">
-                        <div class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <div
+                            class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
                             <i data-lucide="heart" class="text-[#8B7355] w-7 h-7"></i>
                         </div>
                         <h3 class="mb-3 text-lg font-bold">الشغف</h3>
@@ -208,7 +203,8 @@
                     </div>
 
                     <div class="text-center">
-                        <div class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <div
+                            class="w-16 h-16 bg-[#8B7355]/10 rounded-full flex items-center justify-center mx-auto mb-4">
                             <i data-lucide="target" class="text-[#8B7355] w-7 h-7"></i>
                         </div>
                         <h3 class="mb-3 text-lg font-bold">الاهتمام بالتفاصيل</h3>
@@ -256,48 +252,52 @@
                     </div>
                     <p class="text-sm mb-6">أثاث وأبواب ومطابخ مخصصة فاخرة مصنوعة بتميز ودقة</p>
                     <div class="flex gap-4 justify-end md:justify-start">
-                        <a href="#"
+                        <a href="https://www.facebook.com/share/17PHz2ZTSb/"
                             class="w-10 h-10 bg-neutral-800 rounded-lg flex items-center justify-center hover:bg-[#8B7355] transition-colors"><i
                                 data-lucide="facebook" class="w-5 h-5"></i></a>
-                        <a href="#"
+                        <a href="https://www.instagram.com/al_kayanly?igsh=ZnNvb2V2MWIyanFv"
                             class="w-10 h-10 bg-neutral-800 rounded-lg flex items-center justify-center hover:bg-[#8B7355] transition-colors"><i
                                 data-lucide="instagram" class="w-5 h-5"></i></a>
-                        <a href="#"
-                            class="w-10 h-10 bg-neutral-800 rounded-lg flex items-center justify-center hover:bg-[#8B7355] transition-colors"><i
-                                data-lucide="linkedin" class="w-5 h-5"></i></a>
                     </div>
                 </div>
-                <div>
+                <div dir="rtl">
                     <h4 class="text-white mb-4 font-bold">روابط سريعة</h4>
                     <ul class="space-y-3">
                         <li><a href="index.html" class="hover:text-[#8B7355] transition-colors">الرئيسية</a></li>
-                        <li><a href="about.html" class="hover:text-[#8B7355] transition-colors">من نحن</a></li>
                         <li><a href="projects.html" class="hover:text-[#8B7355] transition-colors">المشاريع</a></li>
                         <li><a href="process.html" class="hover:text-[#8B7355] transition-colors">العمليات</a></li>
                         <li><a href="contact.html" class="hover:text-[#8B7355] transition-colors">تواصل</a></li>
+                        <li><a href="about.html" class="hover:text-[#8B7355] transition-colors">من نحن</a></li>
                     </ul>
                 </div>
-                <div>
+                <div dir="rtl">
                     <h4 class="text-white mb-4 font-bold">خدماتنا</h4>
                     <ul class="space-y-3">
-                        <li><a href="furniture.html" class="hover:text-[#8B7355] transition-colors">أثاث مخصص</a></li>
-                        <li><a href="doors.html" class="hover:text-[#8B7355] transition-colors">أبواب فاخرة</a></li>
-                        <li><a href="kitchens.html" class="hover:text-[#8B7355] transition-colors">مطابخ راقية</a></li>
+                        <li><a href="kitchens.html" class="hover:text-[#8B7355] transition-colors">مطابخ فاخرة</a></li>
+                        <li><a href="doors.html" class="hover:text-[#8B7355] transition-colors">أبواب راقية</a></li>
+                        <li><a href="furniture.html" class="hover:text-[#8B7355] transition-colors">أثاث راقٍ</a></li>
                         <li><a href="contact.html" class="hover:text-[#8B7355] transition-colors">استشارة</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="text-white mb-4 font-bold">تواصل معنا</h4>
                     <ul class="space-y-3">
-                        <li class="flex items-start gap-3"><i data-lucide="map-pin"
-                                class="text-[#8B7355] mt-1 flex-shrink-0 w-5 h-5"></i><span class="text-sm">الرياض،
-                                السعودية</span></li>
-                        <li class="flex items-start gap-3"><i data-lucide="phone"
-                                class="text-[#8B7355] mt-1 flex-shrink-0 w-5 h-5"></i><span
-                                class="text-sm dir-ltr text-left">+966 XX XXX XXXX</span></li>
+                        <li class="flex items-start gap-3">
+                            <i data-lucide="map-pin" class="text-[#8B7355] mt-1 flex-shrink-0 w-5 h-5"></i>
+                            <span class="text-sm">طرابلس - ليبيا</span>
+                        </li>
+                        <li class="flex items-start gap-3">
+                            <i data-lucide="phone" class="text-[#8B7355] mt-1 flex-shrink-0 w-5 h-5"></i>
+                            <div class="flex flex-col">
+                                <span class="text-sm dir-ltr text-left">+218913338808</span>
+                                <span class="text-sm dir-ltr text-left">+218923338808</span>
+                                <span class="text-sm dir-ltr text-left">+218933338808</span>
+                                <span class="text-sm dir-ltr text-left">+218943338808</span>
+                            </div>
+                        </li>
                         <li class="flex items-start gap-3"><i data-lucide="mail"
                                 class="text-[#8B7355] mt-1 flex-shrink-0 w-5 h-5"></i><span
-                                class="text-sm">info@alkiyan.com</span></li>
+                                class="text-sm">info@alkayan.com.ly</span></li>
                     </ul>
                 </div>
             </div>
@@ -313,6 +313,7 @@
             </div>
         </div>
     </footer>
+
 
     <script>
         lucide.createIcons();
