--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
                 <a href="index.html" class="flex items-center ml-auto">
-                    <img src="assets/55.png" alt="الكيان" class="h-16 w-auto">
+                    <img src="assets/logo.png" alt="الكيان" class="h-16 w-auto">
                 </a>
 
                 <!-- Desktop Navigation -->
@@ -238,7 +238,7 @@
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div class="md:col-span-1 text-right md:text-right">
                     <div class="mb-4 flex justify-end md:justify-start">
-                        <img src="assets/55.png" alt="الكيان" class="h-40 w-auto">
+                        <img src="assets/logo.png" alt="الكيان" class="h-20 w-auto">
                     </div>
                     <p class="text-sm mb-6">أثاث وأبواب ومطابخ مخصصة فاخرة مصنوعة بتميز ودقة</p>
                     <div class="flex gap-4 justify-end md:justify-start">
