--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <a href="index.html" class="flex items-center ml-auto">
-                    <img src="assets/logo.png" alt="الكيان" class="h-16 w-auto">
+                    <img src="assets/logo.png" alt="الكيان" class="h-20 w-auto">
                 </a>
                 <nav class="hidden md:flex items-center gap-8">
                     <a href="index.html" class="transition-colors text-neutral-700 hover:text-[#8B7355]">الرئيسية</a>
@@ -62,11 +62,11 @@
                 <div class="text-center max-w-3xl mx-auto">
                     <span class="text-[#8B7355] tracking-wider uppercase">عن الكيان</span>
                     <h1 class="mt-4 mb-6 text-4xl font-bold">
-                        نصنع التميز منذ 2008
-                    </h1>
+                        خبرة تمتد لأكثر من ستة عقود </h1>
                     <p class="text-xl text-neutral-600">
-                        نحن شركة رائدة في تصنيع الأثاث والأبواب والمطابخ، مكرسون لتحويل المساحات من خلال التصميم
-                        الاستثنائي والجودة التي لا تضاهى.
+                        منذ عام 1963، وشركة الكيان تضع بصمتها في عالم صناعة الأثاث والأبواب والمطابخ. نصنع منتجات تجمع
+                        بين الحرفية العالية، التصميم الراقي، وجودة تدوم لسنوات. نعمل لنحوّل كل مساحة إلى مكان يعكس
+                        الذوق، الراحة، والأناقة بلا حدود
                     </p>
                 </div>
             </div>
@@ -79,17 +79,24 @@
                     <div>
                         <h2 class="mb-6 text-3xl font-bold">قصتنا</h2>
                         <p class="text-neutral-600 mb-6">
-                            تأسست "الكيان" في عام 2008 برؤية بسيطة: ابتكار أثاث وديكورات داخلية تصمد أمام اختبار الزمن.
-                            ما بدأ كورشة صغيرة نما ليصبح اسمًا رائدًا في حلول الأثاث والأبواب والمطابخ المخصصة في جميع
-                            أنحاء المملكة العربية السعودية.
+                            منذ تأسيس شركة الكيان سنة 1963، ارتبط اسمنا بالجودة العالية والحرفية التي لا تُخطئها العين.
+                            بدأت رحلتنا بورشة صغيرة تحمل طموحًا كبيرًا: تقديم صناعة محلية تضاهي المنتجات العالمية، وتضع
+                            ليبيا على خريطة الصناعة المتقنة
                         </p>
                         <p class="text-neutral-600 mb-6">
-                            رحلتنا مبنية على أساس الحرفية التقليدية الممزوجة بحس التصميم الحديث. كل قطعة نصنعها تحكي قصة
-                            من التفاني والدقة والتميز الفني.
+                            ومع مرور السنين، تحولت الفكرة إلى مؤسسة قوية ذات سمعة راسخة، لتصبح الكيان واحدة من أولى
+                            الشركات التي قدمت خدماتها داخل ليبيا وخارجها، مما رسّخ حضورها كعلامة موثوقة ومرجع أساسي في
+                            صناعة الأثاث والأبواب والمطابخ
+                        </p>
+                        <p class="text-neutral-600 mb-6">
+                            عملنا منذ البداية على الجمع بين الخبرة المتوارثة عبر الأجيال، والتطوير المستمر في الآلات
+                            والتقنيات الحديثة، لننتج قطعًا تجمع بين المتانة، الجمال، والدقة في التفاصيل. قوتنا الحقيقية
+                            كانت دائمًا في التزامنا: التزام بالجودة، بالتسليم، وبإرضاء العميل مهما كان حجم المشروع
                         </p>
                         <p class="text-neutral-600">
-                            اليوم، نخدم عملاء مميزين يقدرون الفرق الذي تحدثه المواد عالية الجودة والحرفية الخبيرة
-                            والخدمة الشخصية في إنشاء مساحات استثنائية حقًا.
+                            واليوم، وبعد أكثر من ستين عامًا من العمل المستمر، تواصل شركة الكيان الحفاظ على مكانتها كأحد
+                            أعمدة الصناعة في ليبيا، وتستمر في التوسع بهدوء وثبات—مصرةً على تقديم منتجات راقية تليق بثقة
+                            عملائنا في الداخل والخارج
                         </p>
                     </div>
                     <div class="relative">
@@ -122,8 +129,8 @@
                         </div>
                         <h3 class="mb-4 text-xl font-bold">رؤيتنا</h3>
                         <p class="text-neutral-600">
-                            أن نكون الوجهة الأولى للأثاث والديكورات الداخلية الفاخرة المخصصة في المملكة العربية
-                            السعودية. نطمح لوضع معايير جديدة في الجودة والتصميم ورضا العملاء مع الحفاظ على قيم الحرفية
+                            أن نكون الوجهة الأولى للأثاث والديكورات الداخلية الفاخرة المخصصة في ليبيا. نطمح لوضع معايير
+                            جديدة في الجودة والتصميم ورضا العملاء مع الحفاظ على قيم الحرفية
                             التقليدية.
                         </p>
                     </div>
@@ -222,11 +229,11 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
                     <div class="text-center">
-                        <div class="text-4xl text-[#8B7355] mb-2 font-bold">15+</div>
+                        <div class="text-4xl text-[#8B7355] mb-2 font-bold">60+</div>
                         <div class="text-neutral-600">سنة خبرة</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-4xl text-[#8B7355] mb-2 font-bold">500+</div>
+                        <div class="text-4xl text-[#8B7355] mb-2 font-bold">10,000+</div>
                         <div class="text-neutral-600">مشروع مكتمل</div>
                     </div>
                     <div class="text-center">
@@ -297,7 +304,7 @@
                         </li>
                         <li class="flex items-start gap-3"><i data-lucide="mail"
                                 class="text-[#8B7355] mt-1 flex-shrink-0 w-5 h-5"></i><span
-                                class="text-sm">info@alkayan.com.ly</span></li>
+                                class="text-sm">info@alkayan.ly</span></li>
                     </ul>
                 </div>
             </div>
