--- a/furniture.html
+++ b/furniture.html
@@ -429,7 +429,7 @@
                         </li>
                         <li class="flex items-start gap-3"><i data-lucide="mail"
                                 class="text-[#8B7355] mt-1 flex-shrink-0 w-5 h-5"></i><span
-                                class="text-sm">info@alkayan.com.ly</span></li>
+                                class="text-sm">info@alkayan.ly</span></li>
                     </ul>
                 </div>
             </div>
