--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Kayan</title>
     <link rel="icon" type="image/png" sizes="16x16" href="assets/55.png">
+    <!-- Logo -->
+    <a href="index.html" class="flex items-center ml-auto">
+        <img src="assets/logo.png" alt="Al-Kayan" class="h-20 w-auto">
+    </a>
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
