--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Kayan</title>
 
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/55.png">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="assets/55.png">
+    <!-- Favicon -->
+    <link rel="icon" href="assets/55.png" type="image/png">
 
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
 
+    <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap"
         rel="stylesheet">
 
+    <!-- Custom CSS -->
     <style>
         body {
             font-family: 'Cairo', 'Inter', sans-serif;
@@ -26,7 +30,19 @@
             scroll-behavior: smooth;
         }
     </style>
+
+    <!-- Structured Data for Google (Logo & Organization) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Al-Kayan",
+      "url": "https://example.com",
+      "logo": "https://example.com/assets/55.png"
+    }
+    </script>
 </head>
+
 
 <body class="bg-white min-h-screen flex flex-col">
 
